# PROJET-NDI-2016

./: .gitignore  README.md  id_rsa.pub
app/: .gitignore  CMakeLists.txt  server.scgi.c
app/cmake/: FindHTMLC.cmake
app/core/HTTP/header/: header.c  header.h
app/core/HTTP/request/: method.c  method.h
app/core/markdown/: markdown.c  markdown.h  markdown.lisp  test.c
app/core/misc/: strdup.c  strdup.h
app/core/session/: session.c  session.h
app/hooks/: hooks.h  register.c  root.c
app/views/: asso.htmlc  association.htmlc  common.htmlc  entries.htmlc  error.htmlc  index.htmlc  nav.htmlc  new_asso.htmlc
public/: index.html
public/refugees/: index.php  routes.php
public/refugees/config/: database.php
public/refugees/controllers/: pages_controller.php  questions_controller.php  topic_controller.php
public/refugees/models/: questions.php  topics.php  users.php
public/refugees/views/: layout.php
public/refugees/views/pages/: home.php
public/refugees/views/questions/: access.php  add.php
public/refugees/views/topics/: read.php
